src/tests/snapshots/fujin__tests__golden__number_jump_w32.snap
---
source: src/tests/golden.rs
expression: "screen_snapshot(&state.render_ui(16, SIDEBAR))"
---
──────────────────────────────
▲ fujin  [nav]
──────────────────────────────
▾ 1 tab1
▌ 1 » alpha             +2 [3]
  2 ◆ bravo
      …/zellij-plugins/fujin
▸ 2 tab2
  3 ○ charlie




──────────────────────────────
  n                     ?:help
