src/tests/snapshots/fujin__tests__golden__search_filtered_w32.snap
---
source: src/tests/golden.rs
expression: "screen_snapshot(&state.render_ui(16, SIDEBAR))"
---
────────────────────────────────
▲ fujin  [nav]
────────────────────────────────
▸ 2 tab2
▌ ○ charlie                     








────────────────────────────────
  /ch   esc:browse  enter:jump
