src/tests/snapshots/fujin__tests__golden__single_pane_w32.snap
---
source: src/tests/golden.rs
expression: "screen_snapshot(&state.render_ui(12, SIDEBAR))"
---
──────────────────────────────
▲ fujin
──────────────────────────────
▾ 1 tab1
▌ › pane1                     




──────────────────────────────
