src/tests/snapshots/fujin__tests__golden__triage_by_urgency_w32.snap
---
source: src/tests/golden.rs
expression: "screen_snapshot(&state.render_ui(16, SIDEBAR))"
---
──────────────────────────────
▲ fujin  [tri]
──────────────────────────────
▌ × alpha                 tab1
  ◆ bravo                 tab1
  » delta                 tab2







──────────────────────────────
  ?:help  esc:back
